Changed project description

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section>
         <h1>lein-gh-pages</h1>
 
-<p>A Leiningen plugin to generate and publish github project pages. This wil</p>
+<p>A Leiningen plugin to generate and publish github project pages. This will create a "gh-pages" repository on any project already tracked with git and that has github as the origin. This branch will be empty except for the html files necessary for publishing a github page. It uses http://github.com/quandrum/Pulp as a static site generator</p>
 
 <h2>Usage</h2>
 
